# kafka-playground

./: .bazelignore  .bazelrc  BUILD  Makefile  README.md  WORKSPACE  docker-compose.yaml
.github/workflows/: builder.yaml
api/: BUILD
api/src/main/java/api/: Api.java
api/src/main/java/dev/dalibor/kafka_playground/: Api.java
api/src/main/java/dev/dalibor/kafka_playground/controllers/healthcheck/: HealthcheckController.java
api/src/main/java/dev/dalibor/kafka_playground/controllers/kafka/: KafkaController.java
api/src/main/java/dev/dalibor/kafka_playground/entities/: CommonUser.java  CommonUserFactory.java  User.java  UserFactory.java
api/src/main/java/dev/dalibor/kafka_playground/entities/topics/: ScalableTopic.java  ScalableTopicFactory.java  Topic.java  TopicFactory.java
api/src/main/java/dev/dalibor/kafka_playground/utils/: BasicLogger.java  DLogger.java  Logger.java
api/src/main/java/entities/: IUser.java  IUserFactory.java
api/src/main/resources/: BUILD  application.yaml
api/src/test/java/dev/dalibor/kafka_playground/controllers/: HealthcheckTest.java
api/src/test/java/dev/dalibor/kafka_playground/entities/: CommonUserTest.java
api/src/test/java/dev/dalibor/kafka_playground/utils/: HttpClientFactory.java
bazel/: junit5.bzl  maven_install.json
core/: BUILD  BUILD.bazel  pom.xml
core/src/main/java/core/: App.java
core/src/test/java/core/: AppTest.java
docker/: docker-compose.yaml  mysql.Dockerfile
infrastructure/database/: ingress.yaml  maindb.yaml
infrastructure/streaming/: broker.yaml  zookeeper.yaml
integration-tests/: BUILD.bazel
integration-tests/src/test/java/dev/dalibor/kafka_playground/integration_tests/controllers/healthcheck/: HealthcheckTest.java
integration-tests/src/test/java/dev/dalibor/kafka_playground/integration_tests/utilities/: HttpClientFactory.java
raven/: BUILD
raven/src/main/java/api/: Api.java
raven/src/main/java/controllers/: Api.java
raven/src/main/java/entities/: CommonUser.java  CommonUserFactory.java  User.java
raven/src/main/resources/: application.yaml
raven/src/test/java/api/: ApiTest.java
raven/src/test/java/controllers/: ApiTest.java
raven/src/test/java/entities/: CommonUserTest.java
