load("@rules_java//java:defs.bzl", "java_binary")

package(default_visibility = ["//visibility:public"])

java_binary(
    name = "core",
    srcs = glob(["src/main/**/*.java"]),
    main_class = "core.App",
    deps = [
        "@maven//:junit_junit",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_slf4j_slf4j_simple",
    ],
)
